fix: correção de contato de whatsapp

--- a/index.html
+++ b/index.html
@@ -4,18 +4,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FGTS Antecipa - Antecipação do Saque-Aniversário do FGTS</title>
+    <title>MGA Soluções Financeiras</title>
     <meta name="description" content="Antecipe seu FGTS de forma rápida, segura e com as melhores taxas do mercado. Processo 100% digital, sem consulta ao SPC/Serasa." />
     <meta name="author" content="FGTS Antecipa" />
-
-    <meta property="og:title" content="FGTS Antecipa - Antecipação do Saque-Aniversário do FGTS" />
-    <meta property="og:description" content="Antecipe seu FGTS de forma rápida, segura e com as melhores taxas do mercado. Processo 100% digital, sem consulta ao SPC/Serasa." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@fgtsantecipa" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
